v3.6.0
- Backport fixes and improvements from addon 5.10.0

v3.5.1
- Support MythTV 29

v3.5.0
- Updated language files from Transifex
- Fix install path for debian build
- No longer handle demuxing
- New setting to show/hide liveTV recordings
- Sync cppmyth upstream (2.9.4)
- Fill flag 'has bookmark' on recordings
- An option to prompt to delete a recording after finishing it
- Adding new section 'Preferences' in settings
- Add a dialog to retry connect the backend on startup
- Replaced custom Dialog class with standard Kodi API call
- Handle recording last played position from the backend
- Bookmark at current position in a recording when you press record on LiveTV
- New setting to send (original) Airdate to Kodi instead of the recording's Start Date/Time.
- Recordings: Separate Thumbnail from Icon
- Allow to keep live show from EPG screen
- Keep original air date of recording on update event from protocol
- Allowing to disable auto-expire for any recording

v3.4.19
- Allow to keep live show from EPG screen

v3.4.18
- Updated language files from Transifex

v3.4.17
- Keep original air date of recording on update event from protocol
- Sync cppmyth upstream (2.5.2)

v3.4.16
- Updated language files from Transifex

v3.4.15
- Updated language files from Transifex

v3.4.14
- Updated language files from Transifex

v3.4.13
- Updated language files from Transifex

v3.4.12
- Sync cppmyth upstream (2.5.1)

v3.4.11
- Sync cppmyth upstream (2.5.0)

v3.4.10
- Updated language files from Transifex

v3.4.9
- Updated language files from Transifex

v3.4.8
- Updated language files from Transifex

v3.4.7
- Updated language files from Transifex

v3.4.6
- fix timer update caused by invalid epg ID

v3.4.5
- Updated language files from Transifex

v3.4.4
- Updated language files from Transifex

v3.4.3
- Support protocol 0.28-pre:88

v3.4.2
- Updated language files from Transifex

v3.4.1
- Updated to GUI API v5.10.0

v3.4.0
- Show stream "channel unavailable" when channel tuning failed
