@@ -19,6 +19,7 @@
     <setting id="enable_edl" type="enum" label="30058" lvalues="30059|30060|30061" default="0" />
     <setting id="inactive_upcomings" type="bool" label="30066" default="true" />
     <setting id="prompt_delete" type="bool" label="30047" default="false" />
+    <setting id="root_default_group" type="bool" label="30069" default="false" />
   </category>
   <category label="30049">
     <setting id="rec_template_provider" type="enum" label="30020" lvalues="30021|30022" default="1" />
